--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=3080
 spring.datasource.url= jdbc:mysql://localhost:3306/banking_system
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=MyNewPass5!
+spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
