--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>RiteshFirstProject</artifactId>
+	<artifactId>bankingsystem</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>RiteshFirstProject</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Banking System</name>
+	<description>Banking System Application</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
